--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "net": "^1.0.2",
     "rxjs": "~7.5.0",
+    "stomp": "^0.1.1",
+    "stompjs": "^2.3.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4",
     "zxcvbn": "^4.4.2"
@@ -30,6 +33,7 @@
     "@angular/cli": "~14.1.3",
     "@angular/compiler-cli": "^14.1.0",
     "@types/jasmine": "~4.0.0",
+    "@types/stompjs": "^2.3.5",
     "@types/zxcvbn": "^4.4.1",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
